--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "author": "Matthew Toledo",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com:mrbinky3000/optimizing-react-renders-presentation.git"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/plugin-transform-runtime": "^7.14.5",
@@ -20,6 +24,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
@@ -33,6 +38,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^4.0.0",
     "sass": "^1.38.1",
+    "source-map-loader": "^3.0.0",
     "standard": "^16.0.3",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
@@ -50,6 +56,7 @@
     "core-js": "^3.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "recoil": "^0.4.1"
   }
 }
